BJS2-44933, Project team management - edits after edits based on comments from the first request